--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 markdown: kramdown
 highlighter: rouge
 permalink: /:categories/:year-:month-:day-:title:output_ext
+
+webrick:
+  headers:
+    Access-Control-Allow-Origin: "*"
