change test server address

--- a/_data/database.yml
+++ b/_data/database.yml
@@ -4,8 +4,8 @@
   address: http://localhost:7847/api/rpc
   image: https://placeimg.com/200/200/any
 - id: 2
-  name: XXXX捐赠数据
+  name: 本地测试用数据库
   description: 由。。。运营，保存有从xxx开始的数据，为实时数据，接受大众监督。由。。。运营，保存有从xxx开始的数据，为实时数据，接受大众监督。由。。。运营，保存有从xxx开始的数据，为实时数据，接受大众监督。
-  address: http://localhost:7848/api/rpc
-  image: https://placeimg.com/100/100/any
+  address: http://localhost:7847/api/rpc
+  image: https://github.com/uchaindb/UClient/raw/master/cordova/model/icon.png?raw=true
 
