update basic test case url

--- a/_data/database.yml
+++ b/_data/database.yml
@@ -1,8 +1,8 @@
 - id: 1
   name: 灯火计划捐赠数据
   description: 由。。。运营，保存有从xxx开始的数据，为实时数据，接受大众监督。由。。。运营，保存有从xxx开始的数据，为实时数据，接受大众监督。由。。。运营，保存有从xxx开始的数据，为实时数据，接受大众监督。
-  address: http://localhost:7847/api/rpc
-  image: https://placeimg.com/200/200/any
+  address: http://dhcdb.uchaindb.com/api/rpc
+  image: http://denghuoluxun.qlgy.org.cn/apple-touch-icon.png
 - id: 2
   name: 本地测试用数据库
   description: 由。。。运营，保存有从xxx开始的数据，为实时数据，接受大众监督。由。。。运营，保存有从xxx开始的数据，为实时数据，接受大众监督。由。。。运营，保存有从xxx开始的数据，为实时数据，接受大众监督。
